# aware-kernel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
aware_kernel/: __init__.py  _version.py  api.py
aware_kernel/aware/: __init__.py  config.py  exceptions.py  state.py  types.py
aware_kernel/embedding/: __init__.py  embedder.py  projector.py
aware_kernel/evaluation/: __init__.py  baselines.py  datasets.py  metrics.py  runner.py
aware_kernel/fusion/: __init__.py  builder.py  calibration.py  gate.py
aware_kernel/global_basis/: __init__.py  builder.py  nystrom.py  whitening.py
aware_kernel/inference/: __init__.py  predictor.py
aware_kernel/local_corrective/: __init__.py  anchors.py  orthogonalizer.py  sparse_features.py
aware_kernel/memory/: __init__.py  base.py  cached.py  streamed.py
aware_kernel/refresh/: __init__.py  budget.py  controller.py  drift.py  pipeline.py
aware_kernel/solver/: __init__.py  normal_eq.py  preconditioner.py  ridge.py
aware_kernel/training/: __init__.py  callbacks.py  loop.py  objectives.py  optimizer.py
aware_kernel/utils/: __init__.py  linalg.py  numerics.py  sampling.py
docs/: deployment.md  design.md  faq.md  getting-started.md
examples/eval_real_world/: README.md
examples/eval_real_world/data_loaders/: __init__.py  loaders.py
examples/eval_real_world/results/: results.csv  results.md  results_table.tex
examples/eval_real_world/scripts/: analyze_results.py  run_evaluation.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_refresh_trigger.py
tests/numerical/: test_calibration_stability.py  test_conditioning.py  test_orthogonalization.py  test_residual_aware_sampling.py  test_spd_solve.py  test_whitening_map.py
tests/unit/: test_api.py  test_aware_config.py  test_aware_state.py  test_aware_types.py  test_embedding.py  test_evaluation.py  test_fusion.py  test_global_basis.py  test_inference.py  test_local_corrective.py  test_memory.py  test_refresh.py  test_solver.py  test_training.py  test_utils_linalg.py  test_utils_numerics.py  test_utils_sampling.py
