[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aware-kernel"
version = "0.1.0"
description = "Refresh-aware hybrid continuous-discrete low-rank kernel learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sachin", email = "sachncs@gmail.com"},
]
keywords = ["kernel", "machine-learning", "nystrom", "ridge-regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
    "black>=23.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/sachncs/aware-kernel"
Repository = "https://github.com/sachncs/aware-kernel"
Issues = "https://github.com/sachncs/aware-kernel/issues"
Changelog = "https://github.com/sachncs/aware-kernel/blob/master/CHANGELOG.md"
Documentation = "https://github.com/sachncs/aware-kernel/tree/master/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["aware_kernel*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501",   # Line length handled by black
    "N806",   # Uppercase variable names (standard in scientific computing: X, R, U, K, etc.)
    "N803",   # Uppercase argument names (standard in scientific computing)
    "N802",   # Uppercase function names (standard in scientific computing)
    "E741",   # Ambiguous variable names (l, O, I are standard in linear algebra)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=aware_kernel",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "numerical: marks numerical invariant tests",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["aware_kernel"]
omit = [
    "*/tests/*",
    "*/evaluation/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
